# Analisis-de-sentimiento

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_sentiment.py
lab/clean/: data_clean.ipynb  mean_repeated_dates.ipynb  obtain_scored_values.ipynb
lab/data_procesing/: adding_data.ipynb  data_lab.ipynb  get_joined_data.ipynb  obtain_missing_ notices.ipynb
lab/news/: get_today_notice.py
lab/trash/: get_notices.py  getter_missing_news.ipynb  massive_api.py
src/: main.py  pipeline.py
src/clean_data/: ICleanDataStrategy.py
src/clean_data/steps/: english_news.py  select_data.py  select_english_news.py  transform_data_types.py  transform_values.py
src/clean_data/strategies/: english_news.py  select_data_strategy.py  transform_values.py
src/data_getter/strategies/: historical_news_data.py  historical_values_data.py
src/news_getter/: IStrategy.py
src/news_getter/stategies/: historical_news_data.py  historical_values_data.py
src/notice_getter/: IStrategy.py
src/notice_getter/stategies/: historical_news_data.py  historical_values_data.py
src/steps/: integration.py
src/steps/clean_data/: ICleanDataFilter.py  english_news.py  final_null_treatment.py  select_data.py  select_english_news.py  transform_data_types.py  transform_values.py
src/steps/feature_engineering/: I_featuring.py  select_valuated_columns.py  sentimient_classification.py
test/: analize_columns.ipynb  prueba_pipe.ipynb  prueba_sentimiento.ipynb  pruebaa.ipynb  test_features.ipynb  testing_pipe.py
(+4 files in other folders)
