[project]
name = "proyecto-mastercard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langdetect>=1.0.9",
    "numpy>=1.24,<2.3.0",
    "pandas>=2.3.2,<3.0.0",
    "pandas-ta>=0.4.71b0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "yfinance>=1.2.0",
]
